(unsure) fixed crammed design on mobile somewhat

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ a {
 
 .hero {
     display: flex;
+    justify-content: space-between;
     padding: 80px;
     padding-left: 100px;
     padding-right: 200px;
@@ -84,6 +85,8 @@ a {
 }
 
 .information{
+    display: flex;
+    justify-content: space-between;
     padding: 60px;
     padding-top: 20px;
     text-align: center;
@@ -105,9 +108,6 @@ figcaption {
 }
 
 img {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     height: 160px;
     width: 160px;
     border: 5px solid #3b82f6;
